2007-04-28 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(char32_t): Ensure char32_t is 4 bytes even if wchar_t is not.

2007-04-27 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::~browser()): Check to make sure we have a root
	scene thread before joining it.

2007-04-27 Braden McDaniel  <braden@endoframe.com>

	gtk_vrml_browser_load_url needs to spawn a new thread.  Otherwise
	we can hold up the main event loop and deadlock.

	* src/openvrml-xembed/gtkvrmlbrowser.cpp
	(resource_fetcher): Added thread_group_ for threads spawned from
	gtk_vrml_browser_load_url; added create_thread wrapper for
	boost::thread::thread_group::create_thread.
	(GtkGLViewer): Added member load_url, a thread function object.
	(GtkGLViewer::load_url): Thread function object called by thread
	spawned from gtk_vrml_browser_load_url.
	(gtk_vrml_browser_load_url(GtkVrmlBrowser *, const gchar **, const
	gchar **): Delegate to a new thread.
	(resource_fetcher::~resource_fetcher()): Join all threads in the
	thread group.
	(resource_fetcher::create_thread(const boost::function0<void> &)):
	Create a new thread.

2007-04-26 Braden McDaniel  <braden@endoframe.com>

	* lib/gtkglext/configure.in: Calls to AM_PATH_GLIB_2_0 and
	AM_PATH_GTK_2_0 aren't doing anything useful; actual dependency
	checking and definition of substitution variables happens using
	pkg-config.

2007-04-22 Braden McDaniel  <braden@endoframe.com>

	Ensure that only one thread at a time writes a request to the
	request channel.

	* src/openvrml-xembed/gtkvrmlbrowser.cpp
	(browser): Added member request_channel_mutex_ to protect
	request_channel_.  Added member function write_request_chars.
	(browser::do_get_resource(const std::string &)): Store a reference
	to the browser in the plugin_resource_istream so that the
	thread-safe function browser::write_request_chars can be called.
	(browser::write_request_chars(const gcharr *, gssize, gsize *)):