@@ -9,14 +9,7 @@ AM_CPPFLAGS = \
         -I$(mozincludedir) \
         -DGTK_DISABLE_DEPRECATED
 AM_CXXFLAGS = @PTHREAD_CFLAGS@ @GTK_CFLAGS@ @GL_CFLAGS@
-AM_LDFLAGS = \
-        @OPENVRML_RPATH@ \
-        @JNI_LIBS@ \
-        @GTK_LIBS@ \
-        @GL_LIBS@ \
-        -lXmu -lXt @X_PRE_LIBS@ @X_LIBS@ @X_EXTRA_LIBS@ \
-        -lboost_thread \
-        @PTHREAD_LIBS@
+AM_LDFLAGS = @OPENVRML_RPATH@ $(GTK_LIBS)
 LDADD = $(top_builddir)/src/libopenvrml-gl/libopenvrml-gl.la \
         $(top_builddir)/src/libopenvrml/libopenvrml.la \
         $(top_builddir)/lib/gtkglext/gtk/libgtkglext-x11-1.0.la \
